<resources>
    <string name="messageSplashScreen">Bem vindo</string>
    <string name="app_name">MeuAppEvento</string>
    <string name="textViewLogin">Email: </string>
    <string name="textViewSenha">Senha: </string>
    <string name="buttonLogin">Enivar</string>
    <string name="buttonCadastro">Cadastro</string>
    <string name="buttonBuscarNome">Buscar do Nome</string>
    <string name="buttonBuscarQR">Buscar do QR</string>
    <string name="textViewNome">Nome: </string>
    <string name="textViewEmail">Email: </string>
    <string name="textViewEndereco">Endereco: </string>
    <string name="textViewCpf">CPF: </string>
    <string name="buttonCadastrar">Cadastrar</string>

</resources>