<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLogin"
        android:text="@string/textViewLogin"
        android:layout_centerInParent="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLogin"
        android:layout_below="@+id/textViewLogin"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSenha"
        android:text="@string/textViewSenha"
        android:layout_below="@+id/editTextLogin"
        android:layout_alignEnd="@+id/textViewLogin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSenha"
        android:layout_below="@id/textViewSenha"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:text="@string/buttonLogin"
        android:layout_below="@id/editTextSenha"
        android:layout_gravity="center_horizontal" />

</LinearLayout>